Build 3.3.0.GA
=============================

** Known BREAKING CHANGES from NH3.2.0.GA to NH3.3.0.GA

    ##### Possible Breaking Changes #####
        * [NH-2214] - SQL Server 2005/2008: Exception is now thrown when paging a statement that requires distinct results, and is ordered by a column that is not included in the result set of the query
                    - Dialog.ExtractColumnOrAliasNames method signature and visibility changed - may affect custom dialects that use this method
        * [NH-2950] - IAccessCallback.NextValue property renamed and changed to a method called IAccessCallback.GetNextValue()
        * [NH-2953] - SequenceStyleGenerator now forces use of a table if a pooled optimizer is chosen and the dialect doesn't support pooled sequences.
        * [NH-2960] - Queries for an entity name will now not include instances of the same class mapped using a different entity name.
        * [NH-2664] - IHqlExpressionVisitor has new property ISessionFactory SessionFactory { get; }
        * [NH-3067] - The use of Substring() in Linq queries have been corrected so the zero-based index parameter in C# is converted to one-based index in SQL.
        * [NH-2528] - Throw exception instead of silently truncate string and blob data
        * [NH-3086] - The base dialect now defaults to ANSI syntax for substring. A custom dialect may need to adjust for this.

** Bug
    * [NH-2956] - SybaseSQLAnywhere10Dialect doesn't override OffsetStartsAtOne
    * [NH-3111] - Wrong SQL generated when subquery uses objects from parent query

** Improvement
    * [NH-3086] - All dialects should support substring() with two arguments

Build 3.3.0.CR1
=============================

** Bug
    * [NH-1477] - Saving a collection (thats been Cleared) with all-delete-orphan using Oracle with ODP drivers
    * [NH-2214] - Distinct and Row_number problem
    * [NH-2347] - Casts inside aggregate functions are incorrectly applied outside of them