@@ -1,3 +1,11 @@
+Build vNext
+=============================
+
+** Known BREAKING CHANGES from NH3.2.0.GA to NH3.3.0.GA
+
+    ##### Possible Breaking Changes #####
+        * IDeleteEventListener, IEventSource: Use generic ISet<> instead of non-generic in method signatures.
+
 Build 3.3.0.GA
 =============================
 
